# controllers/notices/getFavorites.js
@@ -2,15 +2,18 @@ const Notice = require("../../models/notice.js");
 
 const getFavorites = async (req, res) => {
   const { favorites } = req.user;
+  const { page = 1, limit = 12, search = "" } = req.query;
+
   const result = [];
   for (const item of favorites) {
     const notice = await Notice.findById(item);
     result.push(notice);
-    console.log(notice);
   }
-  const { page = 1, limit = 12 } = req.query;
+  const searchResult = result.filter((item) =>
+    item.title.toLowerCase().includes(search.trim().toLowerCase())
+  );
   const skip = (page - 1) * limit;
-  const resultPage = result.slice(skip, skip + limit);
+  const resultPage = searchResult.slice(skip, skip + limit);
 
   res.status(200).json({
     data: resultPage,
